Right click select sometimes failed to select armature in pose mode #115181

Closed
opened 2023-11-20 13:31:45 +01:00 by magnative · 4 comments

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 4070/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 536.99

Blender Version
Broken: version: 4.0.1, branch: blender-v4.0-release, commit date: 2023-11-16 16:40, hash: d0dd92834a08
Worked: 3.6.5
(Also happened with Macbook Air M1 Blender 4.0.1)

Short description of error

When you use Right Click select sometime it take multiple right click to select armature in pose mode
It's never happened when use left click select.

Exact steps for others to reproduce the error

  • Set Right click select
  • Disable Lock Object Modes
  • Add cube & armature
  • Cube stay in object mode, but Armature in Pose mode
  • Try to select a Cube then back to select an armature
  • Sometime it take multiple click to successfully select Armature. (It shown that you select an armature but it doesn't take you to Pose mode)

I try Disable GPU Depth Picking but it doesn't fix.

I use factory setting with only Screencast Key addon enable in attached video

**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 4070/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 536.99 **Blender Version** Broken: version: 4.0.1, branch: blender-v4.0-release, commit date: 2023-11-16 16:40, hash: `d0dd92834a08` Worked: 3.6.5 (Also happened with Macbook Air M1 Blender 4.0.1) **Short description of error** When you use Right Click select sometime it take multiple right click to select armature in pose mode It's never happened when use left click select. <video src="/attachments/b0d9c355-9afb-479b-8b41-6cc0c86a27f6" title="Right Click Bug.mp4" controls></video> **Exact steps for others to reproduce the error** - Set Right click select - Disable Lock Object Modes - Add cube & armature - Cube stay in object mode, but Armature in Pose mode - Try to select a Cube then back to select an armature - Sometime it take multiple click to successfully select Armature. (It shown that you select an armature but it doesn't take you to Pose mode) I try Disable GPU Depth Picking but it doesn't fix. I use factory setting with only Screencast Key addon enable in attached video
magnative added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-11-20 13:31:45 +01:00

Thank you for submitting this report, @Magnative. I can confirm the issue.

I imagine it might be related to the fact that multiple calls to view3d.select are performed with LMB selection:
#95452: Multiple calls of 'view3d.select' with LMB selection keymap

Thank you for submitting this report, @Magnative. I can confirm the issue. I imagine it might be related to the fact that multiple calls to `view3d.select` are performed with LMB selection: #95452: Multiple calls of 'view3d.select' with LMB selection keymap
Germano Cavalcante added
Module
User Interface
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-11-21 01:22:40 +01:00
Member

Raising the priority since this is a regression.

Raising the priority since this is a regression.
Pratik Borhade added
Priority
High
and removed
Priority
Normal
labels 2023-11-23 06:01:42 +01:00
Member
Caused by 618f39fca23ca7734a09a8f08efced8379efd2b3 @ideasman42 @JulienKaspar ^
Member

I don't know what's exactly causing this. @ideasman42 would know more.

I don't know what's exactly causing this. @ideasman42 would know more.
Campbell Barton self-assigned this 2023-11-27 01:54:59 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-11-30 01:15:50 +01:00
Brecht Van Lommel added
Type
Bug
and removed
Type
Report
labels 2023-12-11 16:03:34 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#115181
No description provided.